('GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.0.1

	- Use version.pm [CPAN bug #33206] [GSM]
	- Remove '//' style comments to make strict ANSI compilers happy.
		(Trevor Inman) [CPAN bug #33089]
	- Force client encoding of UTF8 for some tests.
	- Make 03dbmethod.t pass minor test for version 8.1.9
		[CPAN bug #33282]

2.0.0 Released February 2008

Major changes:

	- Make minimum supported server 7.4. [GSM]
	- Overhaul COPY functions: deprecate pg_getline, pg_putline, 
		and pg_endcopy. The new functions are pg_getcopydata, 
		pg_getcopydata_async, pg_putcopydata, and pg_putcopyend. [GSM]
	- Add support for arrays: can pass in arrayrefs to execute, and 
		they are automatically returned as arrays when fetching. [GSM]
	- Add support for asynchronous queries. [GSM]
	- Allow raw transaction statements through - in other words, 
		do not croak if $dbh->prepare("COMMIT") is attempted. Not 
		only was this a little too controlling, there is a growing 
		host of other commands such as "COMMIT PREPARED" that we
		need to allow. [GSM].
	- Check transaction status after each command, to allow 
		things such as 'PREPARE TRANSACTION' to work properly.
		(CPAN bug #32423) [GSM]
	- Overhauled the data type system. [GSM]
	- Switch from cvs to subversion. Switch from gborg to perl.org.
	- Change versioning system to three numbered system.

Bug fixes:

	- Add $dbh->{pg_placeholder_dollaronly} to allow '?' and other symbols 
		to be used in prepared statements without getting interpreted as 
		placeholders, i.e. the geometric operator '?#' (CPAN bug #24124) [GSM]
	- Fix memory leak in bytea quoting. (CPAN bug #21392). Fix memory leak 
		in pg_notifies. [Stephen Marshall smarshall@wsi.com]
	- Fix memory leak when using savepoints. (CPAN bug #29791)
		[airwave@cpan.org]
	- Use adbin, not adsrc, when figuring out the sequence name for the 
		last_insert_id() method. This allows the function to work properly 
		if the sequence name is changed. Note that {pg_cache=>0} should be 