@@ -15,6 +15,7 @@ win32.mak
 Pg.h
 Pg.pm
 Pg.xs
+dbivport.h
 dbdimp.c
 dbdimp.h
 types.c
